--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </li>
         -->
         <li>
-          <a href="#services-target">SERVICES</a>
+          <a href="#skills-target">SKILLS</a>
         </li>
         <li>
           <a href="#contact-target">CONTACT</a>
@@ -83,10 +83,26 @@
       </div>
       -->
       <!-- services -->
-      <div id="services-target">clear</div>
-      <div class="services">
-        <div class="services-title">WHAT CAN I DO</div>
-        <div class="services-text">- add text here -</div>
+      <div id="skills-target">clear</div>
+      <div class="skills">
+        <div class="skills-title">SKILLS I HAVE</div>
+        <div class="skills-text">
+          <div class="col-container">
+            <div class="col-3"><div class="invis">clear</div></div>
+            <div class="col-2">
+              <div class="skill-detail">HTML5</div>
+              <div class="skill-detail">JavaScript</div>
+              <div class="skill-detail">Photoshop</div>
+            </div>
+            <div class="col-2"><div class="invis">clear</div></div>
+            <div class="col-2">
+              <div class="skill-detail">CSS3</div>
+              <div class="skill-detail">jQuery</div>
+              <div class="skill-detail">After Effects</div>
+            </div>
+            <div class="col-3"><div class="invis">clear</div></div>
+          </div>
+        </div>
       </div>
       <div id="contact-target">clear</div>
       <div class="contact">
