--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Curtis Hardy - Web Developer</title>
     <link rel="stylesheet" href="css/stylesheet.css">
-    <link href='http://fonts.googleapis.com/css?family=Open+Sans:700,300,600,800,400' rel='stylesheet' type='text/css'>
+    <link href="http://fonts.googleapis.com/css?family=Open+Sans:700,300,600,800,400" rel="stylesheet" type="text/css">
+    <link rel="icon" type="image/png" sizes="96x96" href="images/icons/favicon-96x96.png">
+    <!-- Scripts -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="js/jquery.fullscreenBackground.js"></script>
     <script src="js/modernizr.js"></script>
@@ -60,7 +62,7 @@
                 <b>DILIGENT</b>
                 <b>COORDINATED</b>
                 <b>PROFESSIONAL</b>
-                <b>EXPEDITIOUS</b>
+                <b>DEPENDABLE</b>
               </span>
             </h1>
           </section>
@@ -85,7 +87,7 @@
       <!-- services -->
       <div id="skills-target">clear</div>
       <div class="skills">
-        <div class="skills-title">SKILLS I HAVE</div>
+        <div class="skills-title">SKILLS</div>
         <div class="skills-text">
           <div class="col-container">
             <div class="col-3"><div class="invis">clear</div></div>
@@ -96,7 +98,7 @@
             </div>
             <div class="col-2"><div class="invis">clear</div></div>
             <div class="col-2">
-              <div class="skill-detail">CSS3</div>
+              <div class="skill-detail">CSS3 </div>
               <div class="skill-detail">jQuery</div>
               <div class="skill-detail">After Effects</div>
             </div>
@@ -106,8 +108,8 @@
       </div>
       <div id="contact-target">clear</div>
       <div class="contact">
-        <div class="contact-title">GET IN TOUCH</div>
-        <div class="contact-text">- add text here -</div>
+        <div class="contact-title">CONTACT</div>
+        <div class="contact-text">Want to get in touch? Feel free to contact me via email.<br>I am available 9-5 on weekdays, and 10-1 on weekends.<br><div class="contact-email">hardy.curtis@outlook.com</div></div>
       </div>
     </div>
   </body>
